--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,9 @@ on:
   create:
     tags:
       - v*
+  push:
+    branches:
+    - master
   
 jobs:
   build:
@@ -25,5 +28,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
     - run: mpm run build-prod --if-present
