--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,7 @@ jobs:
   
     - name: Upload Release Assets
       uses: alexellis/upload-assets@0.3.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-       asset_paths: '["reportbro-designer-*.tgz"]'
+        asset_paths: '["reportbro-designer-*.tgz"]'
