Define a postpack script that generates a zip archive

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "main": "dist/reportbro.js",
   "scripts": {
     "build": "webpack",
-    "build-prod": "webpack --config webpack.config.prod.js && uglifyjs ./dist/reportbro.js --comments '/Copyright/' -c -m -o ./dist/reportbro.min.js --source-map filename=\"'./dist/reportbro.min.js.map'\""
+    "build-prod": "webpack --config webpack.config.prod.js && uglifyjs ./dist/reportbro.js --comments '/Copyright/' -c -m -o ./dist/reportbro.min.js --source-map filename=\"'./dist/reportbro.min.js.map'\"",
+    "postpack": "tar2zip reportbro-designer-*.tgz"
   },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
